--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
   "dependencies": {
     "@paralleldrive/cuid2": "^2.2.2",
     "@prisma/client": "^5.22.0",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-visually-hidden": "^1.2.4",
     "@supabase/supabase-js": "^2.76.1",
     "browser-image-compression": "^2.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "dompurify": "^3.3.1",
     "lucide-react": "^0.546.0",
     "mime-types": "^3.0.2",
     "motion": "^12.23.24",
@@ -35,11 +39,13 @@
     "sharp": "^0.34.5",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
+    "trix": "^2.1.16",
     "uuid": "^13.0.0",
     "zod": "^4.1.12"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/dompurify": "^3.0.5",
     "@types/mime-types": "^3.0.1",
     "@types/node": "^20",
     "@types/react": "^19",
