--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,6 +30,7 @@
   },
   "include": [
     "next-env.d.ts",
+    "react-trix/trix-jsx.d.ts",
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
