--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "build": "prisma generate && next build --turbopack",
     "start": "next start",
+    "start:prod": "prisma db push --accept-data-loss && node server.js",
     "lint": "eslint",
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
@@ -15,7 +16,7 @@
   },
   "dependencies": {
     "@paralleldrive/cuid2": "^2.2.2",
-    "@prisma/client": "^5.22.0",
+    "@prisma/client": "~5.22.0",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-visually-hidden": "^1.2.4",
     "@supabase/supabase-js": "^2.76.1",
@@ -54,7 +55,7 @@
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
     "eslint-config-next": "^15.5.6",
-    "prisma": "^5.22.0",
+    "prisma": "~5.22.0",
     "shadcn": "^3.5.0",
     "tailwindcss": "^4",
     "typescript": "^5"
