--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "motion": "^12.23.24",
     "next": "^15.5.6",
     "next-auth": "5.0.0-beta.25",
+    "parse-ingredient": "^1.3.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-markdown": "^10.1.0",
